# netbox-quicklinks

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  Makefile  README.md  pyproject.toml
netbox_quicklinks/: __about__.py  __init__.py  config.py  urls.py  views.py
