[tool.poetry]
name = "netbox-quicklinks"
version = "0.1.0"
description = "Netbox plugin for supporting quick links based on unique item values"
authors = ["Ethan Paul <24588726+enpaul@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
