[tool.poetry]
name = "netbox-quicklinks"
version = "0.1.0"
description = "Netbox plugin for supporting quick links based on unique item values"
authors = ["Ethan Paul <24588726+enpaul@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
blacken-docs = "^1.16.0"
mdformat = "^0.7.17"
mdformat-gfm = "^0.3.5"
mypy = "^1.6.1"
pre-commit = "^3.5.0"
pre-commit-hooks = "^4.5.0"
pylint = "^3.0.2"
reorder-python-imports = "^3.12.0"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
